src/test/ui/issues/issue-35988.stderr
error[E0277]: the size for values of type `[std::boxed::Box<E>]` cannot be known at compilation time
  --> $DIR/issue-35988.rs:2:7
   |
LL |     V([Box<E>]),
   |       ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[std::boxed::Box<E>]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
