src/test/ui/issues/issue-35988.rs
enum E {
    V([Box<E>]),
    //~^ ERROR the size for values of type
}

fn main() {}
